--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,16 +1,18 @@
 ---
+import Contact from "../svgs/ContactSVG.astro";
+import Linkedin from "../svgs/Linkedin.astro";
 import Github from "../svgs/Github.astro";
-import Hackthebox from "../svgs/Hackthebox.astro";
-
 ---
 
 <header>
   <div class="header_section">
     <h1 class="initial-animation">Hola, soy Eric Duart.</h1>
-    <h2 class="initial-animation highlight">Desarrollador software</h2>
-    <p class="skills initial-animation"># Node.js | React | Kotlin | API REST</p>
+    <h2 class="initial-animation highlight">Desarrollador <span class="highlight_span">full stack</span> con <span class="highlight_span">+1</span> año de experiencia.</h2>
+    <p class="skills initial-animation"># Next.js | .NET | API REST | EF CORE</p>
     <div class="links">
       <a class="initial-animation link_block reverseHover" href="https://github.com/ericduart" target="_blank"><Github /></a>
+      <a class="initial-animation link_block reverseHover" href="https://www.linkedin.com/in/eric-duart-272882174/" target="_blank"><Linkedin/></a>
+      <a class="initial-animation link_block reverseHover" href="mailto:eric.duasan@gmail.com" target="_blank"><Contact/></a>
     </div>
   </div>
   <div class="header_section">
@@ -59,6 +61,11 @@ import Hackthebox from "../svgs/Hackthebox.astro";
     margin-top: 50px;
     display: flex;
     align-items: center;
+  }
+
+  .highlight_span {
+    color: var(--color-highlight);
+    font-weight: bolder;
   }
 
   .header_section {
