add missing init animations

--- a/src/components/Aboutme.astro
+++ b/src/components/Aboutme.astro
@@ -1,8 +1,8 @@
 <section>
   <div>
     <p class="initial-animation justify">Creo que, si tuviera que definirme en una frase breve, diría algo como:</p> 
-    <p class="bold"><span class="comillas">"</span>Curioso con curiosidad no finita.<span class="comillas">"</span></p>
-    <p>Me encanta leer fantasía, jugar volleyball y, por supuesto, programar.</p>
+    <p class="bold initial-animation"><span class="comillas">"</span>Curioso con curiosidad no finita.<span class="comillas">"</span></p>
+    <p class="initial-animation">Me encanta leer fantasía, jugar volleyball y, por supuesto, programar.</p>
 
   </div>
 </section>
