refactor Header component to apply initial animation to links

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,10 +9,10 @@ import Github from "../svgs/Github.astro";
     <h1 class="initial-animation">Hola, soy Eric Duart.</h1>
     <h2 class="initial-animation highlight">Desarrollador <span class="highlight_span">full stack</span> con <span class="highlight_span">+1</span> año de experiencia.</h2>
     <p class="skills initial-animation"># Next.js | .NET | API REST | EF CORE</p>
-    <div class="links">
-      <a class="initial-animation link_block reverseHover" href="https://github.com/ericduart" target="_blank"><Github /></a>
-      <a class="initial-animation link_block reverseHover" href="https://www.linkedin.com/in/eric-duart-272882174/" target="_blank"><Linkedin/></a>
-      <a class="initial-animation link_block reverseHover" href="mailto:eric.duasan@gmail.com" target="_blank"><Contact/></a>
+    <div class="links initial-animation">
+      <a class="link_block reverseHover" href="https://github.com/ericduart" target="_blank"><Github /></a>
+      <a class="link_block reverseHover" href="https://www.linkedin.com/in/eric-duart-272882174/" target="_blank"><Linkedin/></a>
+      <a class="link_block reverseHover" href="mailto:eric.duasan@gmail.com" target="_blank"><Contact/></a>
     </div>
   </div>
   <div class="header_section">
