add Experience component and integrate it into the main layout; update styles and add Kanit font

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,22 +1,24 @@
 ---
+import { Image } from 'astro:assets';
 import Contact from "../svgs/ContactSVG.astro";
 import Linkedin from "../svgs/Linkedin.astro";
 import Github from "../svgs/Github.astro";
+import me from "../components/assets/me.jpg"
 ---
 
 <header>
   <div class="header_section">
-    <h1 class="initial-animation">Hola, soy Eric Duart.</h1>
+    <h1 class="initial-animation">Eric Duart.</h1>
     <h2 class="initial-animation highlight">Desarrollador <span class="highlight_span">full stack</span> con <span class="highlight_span">+1</span> año de experiencia.</h2>
     <p class="skills initial-animation"># Next.js | .NET | API REST | EF CORE</p>
     <div class="links initial-animation">
-      <a class="link_block reverseHover" href="https://github.com/ericduart" target="_blank"><Github /></a>
-      <a class="link_block reverseHover" href="https://www.linkedin.com/in/eric-duart-272882174/" target="_blank"><Linkedin/></a>
-      <a class="link_block reverseHover" href="mailto:eric.duasan@gmail.com" target="_blank"><Contact/></a>
+      <a class="link_block reverseHover" aria-label="Github" href="https://github.com/ericduart" target="_blank"><Github /></a>
+      <a class="link_block reverseHover" aria-label="Linkedin" href="https://www.linkedin.com/in/eric-duart-272882174/" target="_blank"><Linkedin/></a>
+      <a class="link_block reverseHover" aria-label="Contact me" href="mailto:eric.duasan@gmail.com" target="_blank"><Contact/></a>
     </div>
   </div>
   <div class="header_section">
-    <img class="initial-animation" src="/me.jpg" alt="Avatar de mi">
+    <Image src={me} alt="Eric Duart" class='initial-animation' loading="eager" />
   </div>
 
 </header>
