--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Header from '../components/Header.astro'
 import Projects from '../components/Projects.astro';
 import Aboutme from '../components/Aboutme.astro';
 import Contact from '../components/Contact.astro';
+import Experience from '../components/Experience.astro';
 ---
 
 <Layout title="Eric Duart">
@@ -12,10 +13,11 @@ import Contact from '../components/Contact.astro';
 
 	<main>
 		<Aboutme />
+		<Experience />
 		<Projects />
+		<Contact />
 	</main>
 	
-	<Contact />
 
 </Layout>
 
