--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-
+import '@fontsource/kanit';
 import { lightSvgID, darkSvgID } from '../utils/constants'
 
 interface Props {
@@ -84,6 +84,11 @@ import Moon from '../svgs/moon.astro'
 		--color-highlight: #00ff74;
 	}
 
+	::selection {
+		background-color: var(--color-highlight);
+		color: var(--background);
+	}
+
 	path {
     stroke: var(--svg-color);
   }
@@ -101,11 +106,11 @@ import Moon from '../svgs/moon.astro'
 		margin: 0;
 		padding: 0;
 		box-sizing: border-box;
-		font-family: Arial, Helvetica, sans-serif;
+		font-family: 'Kanit', Arial, Helvetica, sans-serif;
 	}
 
 	html {
-		font-family: system-ui, sans-serif;
+		/* font-family: system-ui, sans-serif; */
 		background: var(--background);
 		color: var(--color-primary);
 		background-size: 224px;
