feat: add open graph meta tags

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,14 +13,21 @@ import Moon from '../svgs/moon.astro'
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="es">
 	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+		<meta name="description" content="Soy Eric Duart, desarrollador full stack con +1 año de experiencia" />
+		<meta charset="UTF-8" />
+		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<meta property="og:title" content="Eric Duart" />
+		<meta property="og:description" content="Soy Eric Duart, desarrollador full stack con +1 año de experiencia" />
+		<meta property="og:image" content="/og_image.webp" />
+		<meta property="og:url" content="https://ericduart.github.io/" />
+		<meta property="og:type" content="website" />
+		<meta property="og:locale" content="es_ES" />
+		<meta property="og:site_name" content="Eric Duart" />
+
 	</head>
 	<body>
 		<nav>
